--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <!--<script src="https://unpkg.com/simplebar@latest/dist/simplebar.js"></script>-->
 
       <script type='text/javascript' src='src/js/data-manager.js'></script>
+      <script type='text/javascript' src='src/js/users.js'></script>
       <script type='text/javascript' src='src/js/order-cards.js'></script>
       <script type='text/javascript' src='src/js/number-input.js'></script>
       <script type='text/javascript' src='src/js/menu.js'></script>
