JavaScript minifying and bundling

--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <title>TCG Order</title>
-	  <meta name="Description" content="The order site for the Custom WoW TCG cards and tokens.">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <meta name="theme-color" content="#ff0000"/>
+	<head>
+		<title>TCG Order</title>
+		<meta name="Description" content="The order site for the Custom WoW TCG cards and tokens.">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="theme-color" content="#ff0000"/>
 
-	  <link rel='stylesheet' type='text/css' href='dist/css/style.css'>
+		<link rel='stylesheet' type='text/css' href='dist/css/style.css'>
 
-      <link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto:900' rel='stylesheet'>
+		<!--<link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto:900' rel='stylesheet'>-->
 
-      <script type='text/javascript' src='https://code.jquery.com/jquery-3.4.1.min.js' data-cfasync='false' charset='utf-8'></script>
-      <script type='text/javascript' src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js'></script>
-   </head>
-   <body>
-      <div id='bg-container'>
-         <div id='bg-side-circle'></div>
-         <div id='bg-large-circle'></div>
-         <div id='bg-inner-circle'></div>
-         <div id='bg-cover-fire-circles'></div>
-         <div id='bg-small-circle'></div>
-         <div id='bg-top'></div>
-      </div>
+		<script type='text/javascript' src='https://code.jquery.com/jquery-3.4.1.min.js' data-cfasync='false' charset='utf-8'></script>
+		<script type='text/javascript' src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js'></script>
+	
+		<script type='text/javascript' src='dist/js/scripts.js'></script>
+	</head>
+	<body>
+		<div id='bg-container'>
+			<div id='bg-side-circle'></div>
+			<div id='bg-large-circle'></div>
+			<div id='bg-inner-circle'></div>
+			<div id='bg-cover-fire-circles'></div>
+			<div id='bg-small-circle'></div>
+			<div id='bg-top'></div>
+		</div>
 
+		<div id='page'>
+			<div id='order-table'></div>
+			<div id='menu'></div>
+		</div>
 
-      <div id='page'>
-          <div id='order-table'></div>
-          <div id='menu'></div>
-	  </div>
-	  
-	  <script type='text/javascript' src='src/js/data-manager.js'></script>
-      <script type='text/javascript' src='src/js/users.js'></script>
-      <script type='text/javascript' src='src/js/order-cards.js'></script>
-      <script type='text/javascript' src='src/js/number-input.js'></script>
-      <script type='text/javascript' src='src/js/menu.js'></script>
-      <script type='text/javascript' src='src/js/table.js'></script>
-      <script type='text/javascript' src='src/js/card-tooltips.js'></script>
-      <script type='text/javascript' src='src/js/filter-selector.js'></script>
-      <script type='text/javascript' src='src/js/init.js'></script>
-   </body>
+	</body>
 </html>
