Overlay + modal container

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 			<div id='bg-top'></div>
 		</div>
 
+		<div id='menu'></div>
+
 		<div id='page'>
 			<div id='order-table'></div>
-			<div id='menu'></div>
 		</div>
+
+		<div id="modal"></div>
 
 	</body>
 </html>
