--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		<title>TCG Order</title>
 		<meta name="Description" content="The order site for the Custom WoW TCG cards and tokens.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="theme-color" content="#ff0000"/>
+		<meta name="theme-color" content="#000000"/>
 
 		<link rel='stylesheet' type='text/css' href='dist/css/style.css'>
 
 		<!--<link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto:900' rel='stylesheet'>-->
 
-		<script type='text/javascript' src='https://code.jquery.com/jquery-3.4.1.min.js' data-cfasync='false' charset='utf-8'></script>
-		<script type='text/javascript' src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js'></script>
+		<script type='text/javascript' src='https://code.jquery.com/jquery-3.6.0.min.js' data-cfasync='false' charset='utf-8'></script>
+		<script type='text/javascript' src='https://code.jquery.com/ui/1.13.1/jquery-ui.min.js'></script>
 	
 		<script type='text/javascript' src='dist/js/scripts.js'></script>
 	</head>
